--- a/lecture/01.md
+++ b/lecture/01.md
@@ -1,15 +1,16 @@
 # 手順1
-GitHubアカウントを登録し、ログインした状態になります(不明な場合はgoogle検索してください)
+GitHubアカウントを登録し、ログインした状態になります  
+(不明な場合はgoogle検索してください)
 
 # 手順2
 このページ右上のForkボタンを押します
 
 # 手順3
-次のURLの「nandemotoken」部分を、あなたのgithubアカウント名に変更します。
-右上の編集ボタンをクリックして編集してください
+次のURLの「nandemotoken」部分を、あなたのgithubアカウント名に変更します。  
+右上の編集ボタンをクリックして編集してください  
 https://nandemotoken.github.io/very_simple_dapps/
 
 # 手順4(オプション)
-Webデザインの知識がある場合は、HTMLファイルなどを編集し、見た目を良くします
+Webデザインの知識がある場合は、HTMLファイルなどを編集し、見た目を良くします  
 
 ### これにより、あなたが自由に編集できるDappS対応サイトが手に入りました
