--- a/lecture/01.md
+++ b/lecture/01.md
@@ -11,6 +11,6 @@ GitHubアカウントを登録し、ログインした状態になります
 https://nandemotoken.github.io/very_simple_dapps/
 
 # 手順4(オプション)
-Webデザインの知識がある場合は、HTMLファイルなどを編集し、見た目を良くします  
-
+Webデザインの知識がある場合は、index.htmlファイルなどを編集し、見た目を良くします  
+  
 ### これにより、あなたが自由に編集できるDappS対応サイトが手に入りました
