--- a/lecture/01.md
+++ b/lecture/01.md
@@ -8,10 +8,11 @@ GitHubアカウントを登録し、ログインした状態になります
 # 手順3
 次のURLの「nandemotoken」部分を、あなたのgithubアカウント名に変更します。  
 右上の編集ボタンをクリックして編集してください  
-https://nandemotoken.github.io/very_simple_dapps/
+https://nandemotoken.github.io/very_simple_dapps/  
+編集ができ次第、編集後のリンクをクリックしてページを確認します。
 
 # 手順4(オプション)
-Webデザインの知識がある場合は、index.htmlファイルなどを編集し、見た目を良くします  
+Webデザインの知識がある場合は、index.htmlファイルを編集し、見た目を良くします  
 
 ---
 ### これにより、あなたが自由に編集できるDappS対応サイトが手に入りました
