--- a/lecture/01.md
+++ b/lecture/01.md
@@ -15,4 +15,4 @@ https://nandemotoken.github.io/very_simple_dapps/
 Webデザインの知識がある場合は、index.htmlファイルを編集し、見た目を良くします  
 
 ---
-#### あなたが自由に編集できるDappS対応サイトが手に入りました
+### これにより、あなたが自由に編集できるDappS対応サイトが手に入りました
