--- a/lecture/01.md
+++ b/lecture/01.md
@@ -9,7 +9,7 @@ GitHubアカウントを登録し、ログインした状態になります
 次のURLの「nandemotoken」部分を、あなたのgithubアカウント名に変更します  
 右上の編集ボタンをクリックして編集してください  
 https://nandemotoken.github.io/very_simple_dapps/  
-編集ができ次第、編集後のリンクをクリックしてページを確認します  
+編集したらデータが反映されるまで1分ほど待ち、編集後のリンクをクリックしてページを確認します  
 
 # 手順4(オプション)
 Webデザインの知識がある場合は、index.htmlファイルを編集し、見た目を良くします  
